--- a/index.html
+++ b/index.html
@@ -10,3 +10,9 @@
     <meta property="og:title" content="Moby Dick"/>
     <meta property="og:description" content="The book is sailor Ishmael's narrative of the obsessive quest of Ahab, captain of the whaling ship Pequod, for revenge on Moby Dick, the giant white sperm whale that on the ship's previous voyage bit off Ahab's leg at the knee."/>
     <title> Moby Dick </title>
+  </head>
+  <body>
+    <main class="maintext" class="indexbody">
+      
+
+  </body>
