added h1 and p for book title and author

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <main class="maintext" class="indexbody">
-      
+      <h1> Moby Dick </h1>
+      <p> a novel by Herman Melville </p>
 
   </body>
