--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <main class="maintext" class="indexbody">
-      <h1> Moby Dick </h1>
-      <p> a novel by Herman Melville </p>
+      <h1 id="booktitle"> Moby Dick </h1>
+      <p id="bookauthor"> a novel by Herman Melville </p>
 
   </body>
