fun with background images

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <main class="maintext" class="indexbody">
       <h1 id="booktitle"> Moby Dick </h1>
       <p id="bookauthor"> a novel by Herman Melville </p>
+    </main>
 
   </body>
