im trying to be w3c compliant

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title> Moby Dick </title>
   </head>
   <body>
-    <main class="maintext" class "indexbody">
+    <main class="maintext" class="indexbody">
       <h1 id="booktitle"> Moby Dick </h1>
       <p id="bookauthor"> a novel by Herman Melville </p>
     </main>
