--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <title> Moby Dick </title>
   </head>
   <body id=wholething>
+    <nav>
+      <ul>
+        <li> <a href="chapter1.html">Chapter 1</a> </li>
+        <li> <a href="chapter2.html">Chapter 2</a> </li>
+        <li> <a href="chapter3.html">Chapter 3</a> </li>
+        <li> <a href="chapter4.html">Chapter 4</a> </li>
+        <li> <a href="chapter5.html">Chapter 5</a> </li>
+      </ul>
+
+    </nav>
     <main class="indexbody">
       <h1 id="booktitle"> Moby Dick </h1>
       <p id="bookauthor"> a novel by Herman Melville </p>
