--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title> Moby Dick </title>
   </head>
   <body id=wholething>
-    <nav>
+    <nav class= "chapnav">
       <ul>
         <li> <a href="chapter1.html">Chapter 1</a> </li>
         <li> <a href="chapter2.html">Chapter 2</a> </li>
