--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li> <a href="chapter3.html">Chapter 3</a> </li>
         <li> <a href="chapter4.html">Chapter 4</a> </li>
         <li> <a href="chapter5.html">Chapter 5</a> </li>
+        <li> <a href="index.html">Index</a> </li>
       </ul>
 
     </nav>
